# nuclearwar

./: .gitignore  AI_COORDINATION.md  AI_SPENDING  AI_Spending.txt  API_INSTRUCTIONS.md  BOT-CONNECT.txt  CMakeLists.txt  D3X_STAKING_CONTRACT_RUST  EASTER_EGG_CMD.txt  FIXES  GAMEDEATH  GEMINI_BANK_AND_TRADING_ACCOUNT  IMPLEMENT_PRODUCTION.txt  KEEPALIVE  MINING_PROCESS  PUSH_BRAIN_MODULE_INSTRUCTIONS.md  RAINCLAUDE_ACCOUNT  README.md  REVOLUTION.TXT  SEED_  WORLD_BANK_ACCOUNT  all.js  block.js  block2.js  bots.txt  build-map.js  check-console.js  check-errors.js  check.js  check_ai_schema.js  check_balances.js  check_bals.js  check_commanders.js  check_db.js  check_gemini.js  clean_block.js  clear_ai_db.js  companie_simu_wallets  companies_global.csv  companies_medium.csv  (+103 more)
ARCHIVE_OLD_GRAPHICS_FILES/: game.html
AUDIT/: tokenomics
BRAIN_MODULE/: DashboardServer.js  INSTRUCTIONS_BRAIN  PROMPTING
CLAUDE_HEART/: idea
CONTROLLER/: logger.js
COORDINATES/: git
DATA/: companies_africa.csv  companies_micro.csv  companies_russia_asia.csv  datacenters_global.csv
DOCS/: COMPANIESWARFARE.txt  MAINSTRUCTURE_EXPLAINED  description.txt  exchange_hub.TXT
DRONE_BATTLE/: RULES DRONES
ECONOMIC_AUDIT/: economic_audit.py
FRONTED_DOCS/: icons_b64.json
GRAPHIC_FILES/: game.html
IMPROVE_EARTH/: CODEFORNUCLEARWAR.txt
METAPROMPT/: green_globe_shader_agent.md  prompt_compiler_agent.md  sre_audit_agent.md  system_debug_agent.md  world_builder_agent.md
NUCLEAR_EVENT/: logic
Polkadot/: polksinstructions.txt
SCRIPTS/: check.js  check_onchain_balances.js  check_total.js  (+14 more)
(+324 files in other folders)
